@@ -5,6 +5,7 @@ import com.LetMeDoWith.LetMeDoWith.common.enums.common.Yn;
 import com.LetMeDoWith.LetMeDoWith.domain.task.model.TaskCategory;
 import com.LetMeDoWith.LetMeDoWith.domain.task.model.TaskCategory.TaskCategoryCreationType;
 import com.LetMeDoWith.LetMeDoWith.infrastructure.task.jpaRepository.TaskCategoryJpaRepository;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import lombok.RequiredArgsConstructor;
@@ -29,7 +30,7 @@ public class TaskCategoryRepositoryImpl implements TaskCategoryRepository {
   @Override
   public Optional<TaskCategory> getActiveTaskCategory(Long id, Long holderId) {
     return taskCategoryJpaRepository.findByIdAndCategoryHolderIdInAndIsActive(id,
-        List.of(holderId, null), Yn.TRUE);
+        Arrays.asList(holderId, null), Yn.TRUE);
   }
 
   @Override
